--- a/grafico.html
+++ b/grafico.html
@@ -226,62 +226,35 @@
             document.getElementById('totalMalawi').innerText   = fmt(f.filter(r=>r.cat==="Malawi").reduce((s,r)=>s+r.valor,0));
             document.getElementById('totalCampanha').innerText = fmt(f.filter(r=>r.cat==="Campanha").reduce((s,r)=>s+r.valor,0));
 
+            // Decrescente: mais recente primeiro
             const labels = [...new Set(f.map(r=>r.data))].sort((a,b) => {
                 const [d1,m1,y1]=a.split('/'), [d2,m2,y2]=b.split('/');
-                return new Date(y1,m1-1,d1) - new Date(y2,m2-1,d2);
+                return new Date(y2,m2-1,d2) - new Date(y1,m1-1,d1);
             });
 
             // Largura dinâmica: 130px por grupo
-            const totalW = Math.max(labels.length * 130 + 80, 420);
+            const totalW = Math.max(labels.length * 90 + 80, 420);
             document.getElementById('chartInner').style.width = totalW + 'px';
+            document.getElementById('chartInner').style.height = '54vh';
 
-            // Se algum valor passa de 1500, expande a altura proporcionalmente
-            const Y_MAX = 1500;
-            const BASE_H = 54; // vh
-            document.getElementById('chartInner').style.height = BASE_H + 'vh';
+            const allCats = ["Dízimo","Oferta","Malawi","Campanha"];
+            const cores      = { "Dízimo":"#10b981","Oferta":"#3b82f6","Malawi":"#f59e0b","Campanha":"#ef4444" };
+            const coresHover = { "Dízimo":"#34d399","Oferta":"#60a5fa","Malawi":"#fbbf24","Campanha":"#f87171" };
 
-            const cats  = ["Dízimo","Oferta","Malawi","Campanha"];
-            const cores  = { "Dízimo":"#10b981","Oferta":"#3b82f6","Malawi":"#f59e0b","Campanha":"#ef4444" };
-            const realValues = {}; // guarda valor real para o tooltip mostrar corretamente
-
-            const canvas = document.getElementById('meuGrafico');
-            const ctx2d  = canvas.getContext('2d');
-
-            // Calcula valor máximo para definir a altura da barra fantasma
-            const maxVal = Math.max(...labels.flatMap(l =>
-                cats.map(c => f.filter(r=>r.data===l&&r.cat===c).reduce((s,r)=>s+r.valor,0))
-            ), 1);
-            const ghostHeight = maxVal * 0.04; // 4% do máximo — barra stub visível mas discreta
+            // Só inclui na legenda e nos datasets categorias que têm
+            // pelo menos UM valor > 0 em qualquer dia do período filtrado
+            const cats = allCats.filter(c => f.some(r => r.cat === c && r.valor > 0));
 
             const datasets = cats.map(c => {
-                const values = labels.map(l => f.filter(r=>r.data===l&&r.cat===c).reduce((s,r)=>s+r.valor,0));
-                // Guarda valores reais por label
-                if (!realValues[c]) realValues[c] = {};
-                labels.forEach((l, i) => realValues[c][l] = values[i]);
-
-                // Substitui zeros por uma altura mínima visual (barra fantasma)
-                const displayValues = values.map(v => v === 0 ? ghostHeight : v);
-
+                const values = labels.map(l =>
+                    f.filter(r => r.data === l && r.cat === c).reduce((s,r) => s + r.valor, 0)
+                );
                 return {
                     label: c,
-                    // cores serão aplicadas por item no plugin afterDatasetDraw
-                    backgroundColor: displayValues.map((v, i) =>
-                        values[i] === 0
-                            ? cores[c] + '28'   // fantasma: muito transparente
-                            : cores[c] + 'e0'   // barra real: sólida com leve transparência
-                    ),
-                    hoverBackgroundColor: displayValues.map((v, i) =>
-                        values[i] === 0
-                            ? cores[c] + '44'
-                            : cores[c]
-                    ),
-                    borderColor: displayValues.map((v, i) =>
-                        values[i] === 0 ? cores[c] + '55' : 'transparent'
-                    ),
-                    borderWidth: displayValues.map((v, i) => values[i] === 0 ? 1 : 0),
-                    borderDash: [4, 3],
-                    data: displayValues,
-                    realData: values,   // campo extra para o tooltip
+                    // null = barra invisível naquele dia (sem ocupar espaço nem aparecer no tooltip)
+                    data: values.map(v => v > 0 ? v : null),
+                    backgroundColor: cores[c] + 'e0',
+                    hoverBackgroundColor: coresHover[c],
                     borderRadius: 7,
                     borderSkipped: false,
                     barThickness: 22,
@@ -300,6 +273,7 @@
                 }
             };
 
+            const canvas = document.getElementById('meuGrafico');
             chart = new Chart(canvas, {
                 type: 'bar',
                 plugins: [legendGap],
@@ -307,7 +281,7 @@
                 options: {
                     responsive: true,
                     maintainAspectRatio: false,
-                    categoryPercentage: 0.68,
+                    categoryPercentage: 0.85,
                     barPercentage: 0.88,
                     interaction: {
                         mode: 'nearest',
@@ -370,17 +344,9 @@
                             bodyFont: { family: "'JetBrains Mono', monospace", size: 14, weight: '700' },
                             callbacks: {
                                 title: ctx => '📅 ' + ctx[0].label,
-                                label: ctx => {
-                                    // Usa o valor real, não o display (que pode ser ghostHeight)
-                                    const real = ctx.dataset.realData[ctx.dataIndex];
-                                    const label = ctx.dataset.label;
-                                    const icon = { "Dízimo":"●","Oferta":"●","Malawi":"●","Campanha":"●" }[label] || '●';
-                                    if (real === 0) return `  ${label}: —`;
-                                    return `  ${label}: ${fmt(real)}`;
-                                },
+                                label: ctx => `  ${ctx.dataset.label}: ${fmt(ctx.parsed.y)}`,
                                 labelColor: ctx => {
-                                    const cores = { "Dízimo":"#10b981","Oferta":"#3b82f6","Malawi":"#f59e0b","Campanha":"#ef4444" };
-                                    const c = cores[ctx.dataset.label] || '#fff';
+                                    const c = { "Dízimo":"#10b981","Oferta":"#3b82f6","Malawi":"#f59e0b","Campanha":"#ef4444" }[ctx.dataset.label] || '#fff';
                                     return { borderColor: c, backgroundColor: c, borderRadius: 4 };
                                 }
                             }
